style, version, and test improvements